--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
     margin: 0;
 }
 
+.logo a {
+    text-decoration: none; /* 밑줄 제거 */
+    color: inherit; /* 부모 요소의 글자색 상속 (여기서는 header의 색상) */
+}
+
 .nav ul {
     list-style: none;
     margin: 0;
