--- a/style.css
+++ b/style.css
@@ -398,3 +398,25 @@ body {
 .footer-content p {
     margin: 5px 0;
 }
+
+.about-header {
+    display: block;
+    background-color: #6e6e6e; /* 회색 배경 */
+    color: white;
+    padding: 2rem 1rem;
+    text-align: center;
+    border-radius: 0 0 8px 8px; /* 아래쪽 모서리 둥글게 */
+}
+
+.about-title {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+.about-subtitle {
+    font-size: 1rem;
+    max-width: 700px;
+    margin: 0 auto;
+    line-height: 1.5;
+    color: #f1f1f1;
+}
