--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body {
 
 /* Header */
 .header {
-    background-color: #fff;
-    padding: 15px 0;
+    background-color: #34568b;
+    padding: 0px 0;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
@@ -47,7 +47,7 @@ body {
 
 .logo a {
     text-decoration: none; /* 밑줄 제거 */
-    color: inherit; /* 부모 요소의 글자색 상속 (여기서는 header의 색상) */
+    color: #fff; 
 }
 
 .nav ul {
@@ -60,7 +60,7 @@ body {
 
 .nav a {
     text-decoration: none;
-    color: #555;
+    color: #fff;
     font-weight: 500;
     padding: 5px 10px;
     border-radius: 5px;
@@ -73,7 +73,7 @@ body {
 
 /* Intro Section */
 .intro-section {
-    background-color: #ccc;
+    background-color: #fcfcfc;
     padding: 80px 0;
     text-align: center;
 }
@@ -85,6 +85,10 @@ body {
     padding: 50px 0;
     background-color: #a9a9a9;
     color: #fff;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
 }
 
 .intro-text h2 {
@@ -397,26 +401,4 @@ body {
 
 .footer-content p {
     margin: 5px 0;
-}
-
-.about-header {
-    display: block;
-    background-color: #6e6e6e; /* 회색 배경 */
-    color: white;
-    padding: 2rem 1rem;
-    text-align: center;
-    border-radius: 0 0 8px 8px; /* 아래쪽 모서리 둥글게 */
-}
-
-.about-title {
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
-}
-
-.about-subtitle {
-    font-size: 1rem;
-    max-width: 700px;
-    margin: 0 auto;
-    line-height: 1.5;
-    color: #f1f1f1;
 }
