--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 
 .logo a {
     text-decoration: none; /* 밑줄 제거 */
-    color: #fff; 
+    color: #ffffff;
 }
 
 .nav ul {
@@ -181,10 +181,9 @@ body {
 .activities-nav {
     display: flex;
     justify-content: center;
-    gap: 300px;
+    gap: 10px;
     margin-bottom: 30px;
 }
-
 
 .activities-grid {
     display: grid;
@@ -379,20 +378,18 @@ body {
 
 /* Common Button Style */
 .nav-button {
-    background-color: #d9d9d9;
+    background-color: #e9e9e9;
     border: none;
-    padding: 10px 40px;
+    padding: 10px 20px;
     border-radius: 20px;
     cursor: pointer;
     font-size: 1em;
-    color: #fff;
 }
 
-.nav-button:hover {
-    background-color:#34568b;
+.nav-button.active {
+    background-color: #004085;
     color: #fff;
 }
-
 
 /* Footer */
 .footer {
@@ -404,4 +401,26 @@ body {
 
 .footer-content p {
     margin: 5px 0;
+}
+
+.about-header {
+    display: block;
+    background-color: #6e6e6e; /* 회색 배경 */
+    color: white;
+    padding: 2rem 1rem;
+    text-align: center;
+    border-radius: 0 0 8px 8px; /* 아래쪽 모서리 둥글게 */
+}
+
+.about-title {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+.about-subtitle {
+    font-size: 1rem;
+    max-width: 700px;
+    margin: 0 auto;
+    line-height: 1.5;
+    color: #f1f1f1;
 }
