--- a/style.css
+++ b/style.css
@@ -133,24 +133,47 @@ body {
     text-align: center;
 }
 
+/* Design #06에서 수정 */
 .about-nav {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 40px;
     margin-bottom: 30px;
 }
 
+/* Design #06에서 추가 */
+.about-nav .nav-button {
+    padding: 10px 50px; /* 버튼 크기 키우기 */
+    margin-bottom: 25px; /* nav-button 아래 여백 추가 */
+}
+
+/* Design #06에서 추가 */
+.highlight-title {
+    display: inline-block;
+    background-color: #919191;
+    color: white;
+    font-weight: bold;
+    padding: 8px 16px;
+    border-radius: 6px;
+    margin: 40px 0 15px;
+    font-size: 1.2rem;
+}
+
 .club-intro h3 {
+    margin-bottom: 15px; /* 제목과 본문 간 간격 */
     margin-top: 30px;
-    font-size: 1.5em;
+    text-align: middle;
+    font-size: 2.0em;
 }
 
 .club-intro p {
-    line-height: 1.6;
-    color: #555;
-    max-width: 800px;
+    line-height: 2.3;
     margin: 0 auto 30px;
+    max-width: 950px;
+    text-align: left;
+    font-size: 1.1em;
 }
+/* Design #06에서 수정 */
 
 .intro-cards {
     display: flex;
