--- a/style.css
+++ b/style.css
@@ -354,7 +354,6 @@ body {
     margin-bottom: 15px;
 }
 
-/*Design-08 apply button 삭제*/
 
 .two-cards {
     display: flex;
@@ -363,6 +362,7 @@ body {
     width: 80%;
     justify-content: center;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .outer-card {
@@ -371,6 +371,7 @@ body {
     padding: 10px;
     flex: 1; 
     box-sizing: border-box;
+    text-align: left;
 }
 
 .card-label {
@@ -380,14 +381,28 @@ body {
     padding: 5px 15px;
     margin-bottom: 10px;
     font-weight: bold;
+    margin-left: 0;
 }
+
+.card-label-1 {
+    background: #7ed957;
+    color: white;
+}
+
+.card-label-2 {
+    background: #38b6ff;
+    color: white;
+}
+
+/*Design-11 card-label 수정 및 색 추가*/
 
 .inner-card {
     background: white;
     border-radius: 15px;
     padding: 20px;
-    text-align: center;
+    text-align: left;
     height: 100px;
+    width: 93%;
 }
 
 .inner-card h2 {
@@ -401,17 +416,81 @@ body {
 
 /*Design-08 하단 박스 2개 추가*/
 
-
-.apply-button {
-    background-color: #004085;
-    color: #fff;
-    border: none;
-    padding: 15px 40px;
-    border-radius: 5px;
-    font-size: 1.2em;
-    cursor: pointer;
-    margin-top: 30px;
+.apply-card {
+    position: relative; 
+    background:#d9d9d9;
+    border-radius:15px;
+    padding:50px;
+    text-align:center;
+    width: 73%;
+    margin: 0 auto;
+    gap: 20px;
+    margin-bottom: 80px;           
 }
+
+.apply-box {
+    background: #d9d9d9;
+    border-radius: 15px;
+
+  display: flex;
+    flex-direction: column;   
+    gap: 24px;                
+    width: min(100%, 1000px);
+    margin: 0 auto;
+    padding: 24px;            
+    box-sizing: border-box;
+    text-align: left;        
+}
+
+.apply-row {
+    display: flex;            
+    align-items: center;      
+    gap: 20px;               
+}
+
+.apply-circle {
+    background: #ffffff;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 28px;
+    flex: 0 0 100px;         
+}
+
+.apply-order {
+    background: #ffffff;
+    border-radius: 15px;
+    padding: 16px 20px;
+    box-sizing: border-box;
+    flex: 1;
+
+    display: flex;                
+    justify-content: space-between;
+    align-items: center;           
+    text-align: left;
+}
+
+.apply-text {
+    display: flex;
+    flex-direction: column;        
+    gap: 4px;
+}
+
+.apply-button { 
+    background: transparent;
+    border: 2px solid #545454;
+    border-radius: 25px;
+    padding: 8px 20px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+
+/*Desing-11 지원자격부분 추가*/
 
 /* Notices Section */
 .notices-section {
