--- a/style.css
+++ b/style.css
@@ -633,7 +633,7 @@ body {
     position: relative; 
     background:#ffffff;
     border-radius:15px;
-    padding:50px;
+    padding: 20px 60px;
     text-align:left;
     width: 85%;
     margin: 0 auto;
