--- a/style.css
+++ b/style.css
@@ -513,6 +513,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 40px;
 }
 
 .status {
